--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
+body {
+  margin: 0;
+  height: 1vh;
+  background-color: rgb(13, 13, 86);
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+  background-image: url(./Components/Images/bg.jpg);
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
